<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/app_name"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:gravity="center"/>-->

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginTop="100dp"
        android:background="@android:drawable/editbox_background_normal"/>

    <Button
        android:id="@+id/insertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_insert" />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_view_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_results"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F8F9FA">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/text_no_data"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"/>
    </ScrollView>

</LinearLayout>
